<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_auto_nav</name>
  <version>0.0.1</version>
  <description>Auto nav for TurtleBot3</description>

  <export>
	  <build_type>ament_python</build_type>
  </export>
  <maintainer email="sakura.ms0513@gmail.com">masanari sakaki</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
</package>

